--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,9 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",   root_path %></li>
-          <li><%= link_to "Schedule",  talks_path %></li>
+		  <% if signed_in? %>
+          	<li><%= link_to "Schedule",  talks_path %></li>
+          <% end %>
           <li><%= link_to "About",  about_path %></li>
           <% if signed_in? %>
             <li><%= link_to "Users", users_path %></li>
