change the skin theme

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,5 @@
-<footer class="footer">
-  <small>
+<hr>
+<footer>
     <a href="http://kistitechgroup.herokuapp.com/">KISTI Tech group</a>
     by codegen
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "Help",  help_path  %></li>
-    </ul>
-  </nav>
 </footer>
