--- a/app/views/talks/_attend_form.html.erb
+++ b/app/views/talks/_attend_form.html.erb
@@ -1,6 +1,4 @@
-<div id="attend_form">
 
   <!-- %= render 'attend' % -->
-<%= button_to 'Attend', attendance_lists_path(talk_id: @talk) %>
+<%= button_to 'Attend', attendance_lists_path(talk_id: @talk), class: "btn btn-success" %>
 
-</div>
