--- a/app/views/talks/index.html.erb
+++ b/app/views/talks/index.html.erb
@@ -1,45 +1,42 @@
-<% provide(:title, "Schedule") %>
-
-<h1>List of Talks</h1>
-
+<%- model_class = Talk.new.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
 <table class="table table-striped">
-<thead>
-  <tr>
-	<th>Meeting date</th>
-    <th>Speaker</th>
-    <th>Title</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-</thead>
-<tbody>
-<% @talks.each do |talk| %>
-  <tr>
-    <td><%= talk.meetingdate %></td>
-    <td><%= talk.name %></td>
-    <td><%= talk.title %></td>
-    <td>
-       <%= link_to t('.show', :default => t("helpers.links.show")),
-            talk_path(talk), :class => 'btn btn-primary' %>
-    </td>
-
-  <% if current_user.admin? %>
-    <td><%= link_to 'Edit', edit_talk_path(talk) %></td>
-    <td><%= link_to 'Destroy', talk, confirm: 'Are you sure?', method: :delete %></td>
-  <% else %>
-    <td/>
-    <td/>
-  <% end %>
-  </tr>
-<% end %>
-</tbody>
+  <thead>
+    <tr>
+	  <th>Date</th>
+      <th>Speaker</th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @talks.each do |talk| %>
+      <tr>
+	    <td><%= talk.meetingdate %></td>
+        <td><%= talk.name %></td>
+        <td><%= talk.title %></td>
+        <td>
+		  <%= link_to t('.show', :default => t("helpers.links.show")),
+	                      talk_path(talk), :class => 'btn btn-mini' %>
+	
+		  <% if current_user.admin? %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_talk_path(talk), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      talk_path(talk),
+                      :method => :delete,
+                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      :class => 'btn btn-mini btn-danger' %>
+           <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
-
-<br />
-
 <% if current_user.admin? %>
-<%=link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t("helpers.links.new")),
             new_talk_path,
             :class => 'btn btn-primary' %>
 <% end %>
