--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,32 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
+<%- model_class = User.new.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
 
-<ul class="users">
-  <% @users.each do |user| %>
-	<%= render user %>
-  <% end %>
-</ul>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:email) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+
+        <td><%= gravatar_for user, size: 30 %> <%= user.name %></td>
+        <td><%= user.email %></td>
+        <td>
+		<% if current_user.admin? %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_user_path(user), :class => 'btn btn-mini' %>
+		  
+
+	    <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
